As per #3, made the plugin listen to the search event as well

--- a/examples/style.css
+++ b/examples/style.css
@@ -34,3 +34,4 @@ form input { font-size: 16px;}
 .github { font-size: 150%; font-weight: bold; }
 .github a { background: #fff172; padding: 3px 10px;}
 
+#id_search {width: 300px;}
